# ceres-slam

./: .gitignore  CMakeLists.txt  README.md  beautify.sh  doxygen.config  package.xml  vptest.txt
cmake/: FindEigen3.cmake
data/: straight_line_sim.csv  straight_line_sim_map.csv  straight_line_sim_noiseless.csv  straight_line_sim_poses.csv
examples/: blowup_test.cpp  camera_test.cpp  liegroup_test.cpp  loop_test.cpp
include/ceres_slam/: csv_reader.h  dataset_problem.h  dataset_problem.hpp  dataset_problem_phong.h  dataset_problem_phong.hpp  dataset_problem_sun.h  dataset_problem_sun.hpp  geometry.h  image_error.h  image_error.hpp  intensity_error.h  intensity_error_directional_light.h  intensity_error_directional_light.hpp  intensity_error_point_light.h  intensity_error_point_light.hpp  lighting.h  material.h  normal_error.h  normal_error.hpp  operators.h  perturbations.h  perturbations.hpp  point_cloud_aligner.h  point_cloud_aligner.hpp  point_light.h  pose_error.hpp  relative_pose_error.hpp  stereo_camera.h  stereo_camera.hpp  stereo_reprojection_error.h  stereo_reprojection_error.hpp  sun_sensor_error.h  sun_sensor_error.hpp  sun_sensor_error_2d.hpp  utils.h  vertex3d.h
include/ceres_slam/geometry/: geometry.h  geometry.hpp  homogeneous3d.h  point3d.h  point3d.hpp  se3group.h  se3group.hpp  so3group.h  so3group.hpp  vector3d.h  vector3d.hpp  vertex3d.h
include/ceres_slam/geometry/old/: homogeneous3d.h  point3d.h  vector3d.h  vertex3d.h
include/ceres_slam/lighting/: directional_light.h  directional_light.hpp  lighting.h  lighting.hpp  material.h  phong.h  phong.hpp  point_light.h  point_light.hpp  texture.hpp  vertex3d.h  vertex3d.hpp
include/ceres_slam/utils/: csv_reader.hpp  utils.h  utils.hpp
ros/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
ros/devel/lib/pkgconfig/: ceres_slam.pc
ros/devel/share/ceres_slam/cmake/: ceres_slamConfig.cmake
ros/src/ceres_slam/: CMakeLists.txt  package.xml
ros/src/ceres_slam/src/: sparse_stereo_odometry_node.cpp
scripts/: ba_all.sh  ba_all_devon.sh  ba_all_icra.sh  ba_all_iser.sh  ba_all_sims.sh  beautify.sh
src/: main.cpp  stereo_camera.cpp  stereo_reprojection_error.cpp
src/ceres_slam/: dataset_problem.cpp  dataset_problem_phong.cpp  dataset_problem_sun.cpp  geometry_check.cpp  point_cloud_aligner.cpp  stereo_camera.cpp  stereo_reprojection_error.cpp  utils.cpp
src/ceres_slam/utils/: utils.cpp
src/cost_functions/: pose_cost.hpp  relative_pose_cost.hpp  stereo_reprojection_cost.hpp  sun_sensor_cost.hpp  sun_sensor_cost_2d.hpp
src/liegroups/: se3group.hpp  so3group.hpp
src/local_parameterizations/: se3_local_param.hpp  so3_local_param.hpp
src/nodes/: camera_test.cpp  odometry_node.cpp  sparse_stereo_odometry_node.cpp
src/sensor_models/: stereo_camera.hpp
src/tests/: camera_test.cpp  dataset_ba.cpp  dataset_ba_phong.cpp  dataset_vo.cpp  dataset_vo_sun.cpp  geometry_test.cpp  light_test.cpp
src/utils/: utils.hpp
tests/: blowup_test.cpp  camera_test.cpp  dataset_ba_phong.cpp  dataset_vo.cpp  dataset_vo_sun.cpp  dense_stereo_test.cpp  geometry_test.cpp  light_test.cpp
