<package>
	<name>ceres_slam</name>
	<version>0.0.0</version>
	<description>A Ceres-based SLAM system</description>
	<maintainer email="lee.clement@robotics.utias.utoronto.ca">Lee Clement</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>image_transport</build_depend>
	<build_depend>cv_bridge</build_depend>
	<build_depend>message_filters</build_depend>
	<build_depend>rosconsole</build_depend>
	<build_depend>cmake_modules</build_depend>
	<build_depend>eigen</build_depend>
	<build_depend>opencv</build_depend>
    <build_depend>ceres</build_depend>

	<run_depend>roscpp</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>image_transport</run_depend>
	<run_depend>cv_bridge</run_depend>
	<run_depend>message_filters</run_depend>
	<run_depend>rosconsole</run_depend>
	<run_depend>cmake_modules</run_depend>
	<run_depend>eigen</run_depend>
	<run_depend>opencv</run_depend>
    <run_depend>ceres</run_depend>
</package>
