<package>
	<name>ceres_slam</name>
	<version>0.0.0</version>
	<description>A Ceres-based SLAM system</description>
	<maintainer email="lee.clement@robotics.utias.utoronto.ca">Lee Clement</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>image_transport</build_depend>
	<build_depend>cv_bridge</build_depend>
	<build_depend>message_filters</build_depend>

	<run_depend>roscpp</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>image_transport</run_depend>
	<run_depend>cv_bridge</run_depend>
	<run_depend>message_filters</run_depend>
</package>
